# 2026-03-11-hello-claw

./: .gitignore  README.md  RELEASE.md  render.yaml
backend/: Cargo.toml  hello_claw.db
backend/src/: main.rs
docs/: DEPLOY_RENDER.md  DEV_STANDARD.md  ISSUE_LOG.md  PLAN.md  PRD.md
frontend/: build.sh  index.html
